# NightingalePlayer-Testing

./: AUTHORS  CMakeLists.txt  CopyLeft  MANIFEST.in  README  Version
src/: CMakeLists.txt  Entry.h  InitVersions.c  InitVersions.h  PlayerCfgFile.h  README.txt  SystemInit.c  logEntry.c  logEntry.h
src/Log/: CMakeLists.txt  readme-说明.txt
src/Log/DebugHeap/: CMakeLists.txt
src/Log/FunctionsStatistics/: CMakeLists.txt  FunctionsStatistics.cpp
src/Log/StackInfoDebug/: CMakeLists.txt
src/MediaInfo/: CMakeLists.txt  History_DLL.txt  ReadMe.txt  说明.txt
src/MediaInfo/MediaInfoLib/: CMakeLists.txt
src/MediaInfo/MediaInfoLib/Doc/: Doxyfile
src/MediaInfo/MediaInfoLib/Example/: HowToUse.cpp  HowToUse_Dll.JNative.java  HowToUse_Dll.cpp  HowToUse_Dll.cs  HowToUse_Dll.py  HowToUse_Dll3.py  HowToUse_Dll_CLI.cs
src/MediaInfo/MediaInfoLib/MediaInfo/: File_Dummy.cpp  File__Analyse_Automatic.h  File__Analyze.cpp  File__Analyze.h  File__Analyze_Buffer.cpp  File__Analyze_Buffer_MinimizeSize.cpp  File__Analyze_MinimizeSize.h  File__Analyze_Streams.cpp  File__Analyze_Streams_Finish.cpp  File__Base.h  File__Duplicate.cpp  File__MultipleParsing.cpp  MediaInfo.cpp  MediaInfo.h  MediaInfoList.cpp  MediaInfoList.h  MediaInfoList_Internal.cpp  MediaInfo_Config.cpp  MediaInfo_Config.h  MediaInfo_Config_Automatic.cpp  MediaInfo_Config_MediaInfo.cpp  MediaInfo_Config_MediaInfo.h  MediaInfo_Const.h  MediaInfo_Events.h  MediaInfo_Events_Internal.h  MediaInfo_File.cpp  MediaInfo_Inform.cpp  MediaInfo_Internal.cpp  MediaInfo_Internal.h  PreComp.h  Setup.h  TimeCode.cpp  TimeCode.h
src/MediaInfo/MediaInfoLib/MediaInfo/Audio/: File_Aac.cpp  File_Aac_GeneralAudio.cpp  File_Ac3.cpp  File_Aes3.cpp  File_Aes3.h  File_ChannelGrouping.cpp  File_ChannelGrouping.h  File_Dts.cpp  File_Dts.h  File_Flac.cpp  File_Mpega.cpp  File_Pcm.cpp  File_Pcm.h  File_Vorbis.cpp
src/MediaInfo/MediaInfoLib/MediaInfo/Duplicate/: File__Duplicate_MpegTs.cpp  (+3 more)
src/MediaInfo/MediaInfoLib/MediaInfoDLL/: MediaInfoDLL.cpp  MediaInfoDLL.py  MediaInfoDLL3.py  MediaInfoDLL_Static.h
src/MediaInfo/MediaInfoLib/PreRelease/: Enums.cpp  Resources.cpp
src/MediaInfo/MediaInfoLib/RegressionTest/: RegressionTest.cpp  RegressionTest.h  RegressionTest_Basic.cpp  RegressionTest_Events.cpp
src/MediaInfo/Release/: CleanUp.bat  Release_DLL_GNU_Prepare.bat  Release_Lib_GNU_Prepare.bat  Release_Source.bat
src/Messages/: CMakeLists.txt
src/Messages/MessageHandler/: readme-说明.txt
src/Monitors/: CMakeLists.txt  MonitorInterface.c  MonitorInterface.h  Monitors.h  logMonitor.c  logMonitor.h  readme.txt
src/Monitors/FTPClient/: CMakeLists.txt  ftpclientTest.c
src/Monitors/FTPServer/: CMakeLists.txt  ftpserverTest.c
src/Monitors/SystemMonitor/: CMakeLists.txt  system_monitorTest.c
src/Monitors/TinyHttpd/: CMakeLists.txt
src/Monitors/Xmpp/: CMakeLists.txt
src/Player/: CMakeLists.txt  InitPlayer.c  InitPlayer.h  LogPlayer.c  LogPlayer.h  PlayErrorcodeType.h  PlayUtility4UpperInterfaces.cpp  PlayUtility4UpperInterfaces.h  PlayUtilityDataStructures.h  PlayUtilityHandler.c  PlayUtilityHandler.h  PlayUtilityInit.c  PlayUtilityInit.h  PlayUtilityMessage.cpp  PlayUtilityMessage.h  PlayUtilityMessageType.h  Player.h  readme-说明.txt
src/Player/AudioCtrl/: AudioUtilityInit.cpp  AudioUtilityInit.h  AudioUtilityInterfaces.c  AudioUtilityInterfaces.h
src/Player/BasicUtility/: BasicPlayer.cpp  BasicPlayer.h  TestPlayer.cpp  UtilityTime.c  UtilityTime.h  readme-说明.txt
src/Player/Codecs/: CodecUtilityInit.cpp  CodecUtilityInit.h  CodecUtilityInterfaces.c  CodecUtilityInterfaces.h  CodecUtilityMessageType.h  SoftwareCodec.cpp  SoftwareCodec.h  SoftwareCodecOutputAVInfo.c  SoftwareCodecOutputAVInfo.h
src/Player/Codecs/AVParser/: MP3Parser.cpp
src/Player/Others/: UtilityTypeConversion.c  UtilityTypeConversion.h
src/Player/PlayList/: MappingPlayList.cpp  MappingPlayList.h  PlayListUtility.cpp  PlayListUtility.h  PlayListUtilityInit.cpp  PlayListUtilityInit.h  PlayListUtilityInterfaces.cpp  PlayListUtilityInterfaces.h  readme-说明.txt
src/Settings/: CMakeLists.txt  Settings.h  SettingsInterface.c  SettingsInterface.h  SettingsUtilityIniText.c  SettingsUtilityIniText.h  SettingsUtilitySqlite3.c  SettingsUtilitySqlite3.h  logSettings.c  logSettings.h
src/Settings/KeepingSettingModify/: CMakeLists.txt
src/Threads/: CMakeLists.txt
src/Threads/ThreadPool/: CMakeLists.txt
src/Utils/: CMakeLists.txt  Makefile  Utils.h  UtilsInterface.c  UtilsInterface.h  logUtils.c  logUtils.h
src/Utils/Crypto/: CMakeLists.txt  logCrypto.c  logCrypto.h
src/Utils/Crypto/AES/: CMakeLists.txt  aes.c  aes.h
src/Utils/Crypto/Base64/: Base64.cpp  Base64.h  CMakeLists.txt
src/Utils/Crypto/DES/: CMakeLists.txt  des.c  des.h
src/Utils/Crypto/MD5/: CMakeLists.txt  md5c.c
src/Utils/Crypto/RSA/: CMakeLists.txt  RSA.cpp  RSA.h
src/Utils/Crypto/SHA1/: CMakeLists.txt  SHA1.cpp  SHA1.h
src/Utils/Crypto/SHA256/: CMakeLists.txt  sha2.c
src/Utils/ParserIni/: CMakeLists.txt  dictionary.c  iniParserTest.c  iniparser.c
src/Utils/ParserJsonCPP/: CMakeLists.txt  jsonCppTest.cpp
src/Utils/ParserTinyXML2/: CMakeLists.txt  xmlTest.cpp
src/Utils/Sqlite3/: CMakeLists.txt  sqlite3Test.c
src/Utils/Sqlite3/doc/: C-C++中调用SQLITE3的基本步骤.doc  SQLite3 C-C++ 开发接口简介（API函数）.txt  SQLite中的时间日期函数.doc  SQLite入门与分析.doc  SQLite函数使用教程.doc  SQLite的查询优化.doc  sqlite 的相关调查.doc  使用C++模板封装SQLite.doc  关于sqlite_exec回调函数中参数传递的问题.doc  可以避免回调函数复杂性的一组SQLite函数.doc
src/Views/: CMakeLists.txt  LogViews.c  LogViews.h  Views.h  ViewsInterface.c  ViewsInterface.h  ViewsUtility.c  ViewsUtilityInit.c  ViewsUtilityInit.h  main_test.c
src/Views/BMP/: CMakeLists.txt
src/Views/GIF/: CMakeLists.txt  decoder.c  errs.h  gif2bmp.c  gifTest.c  gifscan.c  std.h
src/Views/JPEG/: CMakeLists.txt  tinyjpeg-internal.h  tinyjpeg.c  tinyjpeg.h  tinyjpegTest.c
src/Views/PNG/: CMakeLists.txt
src/Views/PNG/test/: lodepngTest.c
src/Views/Widget/: Makefile  PlayerWidget.c  PlayerWidget.h  PlayingListWidget.cpp  PlayingListWidget.h  readme.txt
src/includes/: build_info.h
src/libs/: readme.txt
(+123 files in other folders)
